--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <title>Search Images</title>
@@ -25,8 +25,9 @@
           placeholder="Search images..." required >
       </div>
       <button class="search-button" type="submit">Search</button>
-      
     </form>
+
+    <span class="loader"></span>
 
    <div class="gallery"></div>
     
