--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,13 @@
       </div>
       <button class="search-button" type="submit">Search</button>
     </form>
+    <div class="loader"></div>
 
-    <span class="loader"></span>
+      
 
    <div class="gallery"></div>
-    
+
+
     <script type="module" src="./main.js"></script>
     <script type="module" src="./js/pixabay-api.js"></script>
     <script type="module" src="./js/render-functions.js"></script>
